chore(swagger): fix swagger
