# internal/app/api/controller/misc.go
@@ -9,17 +9,15 @@ import (
 type MiscController struct {
 }
 
-// GetHealth
-// Auth godoc
+// GetHealth     godoc
 // @Summary      Health
 // @Description  get health info
 // @Tags         misc
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  models.health
+// @Success      200  {object}  models.Health
 // @Security     None
 // @Router       /misc/health [get]
-
 func (c *MiscController) GetHealth(ctx iris.Context) {
 	myHealth := misc.GetHealthService(ctx)
 	_, err := ctx.JSON(myHealth)
